--- a/telegraph/style.css
+++ b/telegraph/style.css
@@ -1,5 +1,3 @@
-
-/* Устанавливаем фиксированную высоту шапки */
 header {
     background-color: #026670;
     color: #ffffff;
@@ -8,17 +6,15 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000; /* Помещаем шапку поверх остального контента */
-    height: 60px; /* Высота шапки */
+    z-index: 1000;
+    height: 60px;
 }
 
-/* Добавляем отступ к секциям, чтобы избежать перекрытия шапкой */
 body {
     background-color: #9fedd7;
-    margin-top: 60px; /* Отступ равен высоте шапки */
+    margin-top: 60px;
     align-items: center;
 }
-
 
 nav {
     display: flex;
@@ -33,17 +29,16 @@ nav a {
 }
 
 .hero {
-    background-image: url('C:\Users\alima\Documents\frontend\frontend.24\frontend-course\mid-project\img\background.jpg'); /* Ссылка на фоновое изображение */
-    background-size: cover; /* Изображение занимает всю секцию */
-    background-position: center; /* Центрируем изображение */
-    height: 100vh; /* Высота секции */
-    display: flex; /* Используем Flexbox */
-    justify-content: center; /* Выровнять элементы по центру горизонтально */
-    align-items: center; /* Выровнять элементы по центру вертикально */
-    text-align: center; /* Центрируем текст */
-    color: #ffffff; /* Цвет текста */
-  }
-  
+    background-image: url('C:\Users\alima\Documents\frontend\frontend.24\frontend-course\mid-project\img\background.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #ffffff;
+}
 
 .about {
     padding: 60px 20px;
@@ -55,12 +50,11 @@ nav a {
 .about-text {
     flex: 1;
     min-width: 250px;
-    
 }
 
 .about img {
     flex: 1;
-    max-width: 450px;
+    max-width: 250px;
     border-radius: 15px;
 }
 
@@ -72,7 +66,7 @@ nav a {
 }
 
 .cards {
-    display:flex;
+    display: flex;
     justify-content: center;
     gap: 30px;
     flex-wrap: nowrap;
@@ -84,7 +78,6 @@ nav a {
     width: 280px;
     border-radius: 15px;
     box-shadow: 0 3px 7px rgba(0, 0, 0, 0.15);
-    
 }
 
 footer {
